added to-do in last cell

--- a/dataset_scraper.ipynb
+++ b/dataset_scraper.ipynb
@@ -1441,7 +1441,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# to-do: \n",
+    "# document above logic\n",
+    "# change labels and folder structure to the following:\n",
+    "# 3. eSocialMedia, 4. fFbPosts, 5. fTwtrPosts, 6. fTxtMssgs\n",
+    "# scrape links of these new folders; one by one"
+   ]
   }
  ],
  "metadata": {
