--- a/dataset_scraper.ipynb
+++ b/dataset_scraper.ipynb
@@ -38,12 +38,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0. normal',\n",
+       " '1. fmemes',\n",
+       " '2. ememes',\n",
+       " '3. eSocialMedia',\n",
+       " '4. fFbPosts',\n",
+       " '5. fTwtrPosts',\n",
+       " '6. fTxtMssgs',\n",
+       " '7. eGreetingAndMisc',\n",
+       " 'allFbPagesEmemes.pickle',\n",
+       " 'ememesLinksfbPage0.pickle',\n",
+       " 'ememesLinksfbPage1.pickle',\n",
+       " 'ememesLinksfbPage10.pickle',\n",
+       " 'ememesLinksfbPage11.pickle',\n",
+       " 'ememesLinksfbPage2.pickle',\n",
+       " 'ememesLinksfbPage3.pickle',\n",
+       " 'ememesLinksfbPage4.pickle',\n",
+       " 'ememesLinksfbPage5.pickle',\n",
+       " 'ememesLinksfbPage6.pickle',\n",
+       " 'ememesLinksfbPage7.pickle',\n",
+       " 'ememesLinksfbPage8.pickle',\n",
+       " 'ememesLinksfbPage9.pickle',\n",
+       " 'ememesLinksList.pickle',\n",
+       " 'fbPagesUsed.pickle',\n",
+       " 'imgTypeToNum.pickle',\n",
+       " 'memegenerator README.md',\n",
+       " 'memegenerator.csv']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir('dataset/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<regex.Match object; span=(0, 1), match='a'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.match('a', 'a'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0. normal',\n",
+       " '1. fmemes',\n",
+       " '2. ememes',\n",
+       " '3. eSocialMedia',\n",
+       " '4. fFbPosts',\n",
+       " '5. fTwtrPosts',\n",
+       " '6. fTxtMssgs',\n",
+       " '7. eGreetingAndMisc']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dataDir = 'dataset/'\n",
-    "imgTypes = [\"0. normal\", \"1. fmemes\", \"2. ememes\", \"3. text\", \"4. thba7o\"]"
+    "imgTypes = list(filter(lambda v: re.match('\\d{1,3}\\. ', v), os.listdir(dataDir)))\n",
+    "imgTypes"
    ]
   },
   {
@@ -59,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,32 +163,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'0. normal': 0,\n",
+       " '1. fmemes': 1,\n",
+       " '2. ememes': 2,\n",
+       " '3. eSocialMedia': 3,\n",
+       " '4. fFbPosts': 4,\n",
+       " '5. fTwtrPosts': 5,\n",
+       " '6. fTxtMssgs': 6,\n",
+       " '7. eGreetingAndMisc': 7}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "imgTypeToNum = {\n",
-    "    \"0. normal\" : 0,\n",
-    "    \"1. fmemes\" : 1,\n",
-    "    \"2. ememes\" : 1, # same label because int the end, both foreign and Egyptian images classify as \"memes\"\n",
-    "    \"3. text\" : 2,\n",
-    "    \"4. thba7o\": 3\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "imgs = {\n",
-    "    \"0. normal\" : [],\n",
-    "    \"1. fmemes\" : [],\n",
-    "    \"2. ememes\" : [],\n",
-    "    \"3. text\" : [],\n",
-    "    \"4. thba7o\": []\n",
-    "}"
+    "imgTypeToNum = {}\n",
+    "for  i, imgType in enumerate(imgTypes):\n",
+    "    imgTypeToNum[imgType] = i\n",
+    "imgTypeToNum"
    ]
   },
   {
