adjusting some issues ;)

--- a/dataset_scraper.ipynb
+++ b/dataset_scraper.ipynb
@@ -83,23 +83,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<regex.Match object; span=(0, 1), match='a'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(re.match('a', 'a'))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -134,8 +117,7 @@
    "outputs": [],
    "source": [
     "client_id = 'your-data-here'\n",
-    "client_secret = 'your-data-here'\n",
-    "#to-do: DELETE THESE STRINGS"
+    "client_secret = 'your-data-here'"
    ]
   },
   {
