got ESccialMedia links, and downloaded their images along with reddit's images. To-do: download images from google's links into greetings folder

--- a/dataset_scraper.ipynb
+++ b/dataset_scraper.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        " '7. eGreetingAndMisc']"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        " '7. eGreetingAndMisc': 7}"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "4  24194267        One Does Not Simply"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "Name: Meme ID, dtype: object"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "Name: Meme ID, dtype: object"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,7 @@
     "    If an error occurs (ex: no internet), return -1\n",
     "    \"\"\"\n",
     "    try:\n",
-    "        browser.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
+    "        browser.execute_script(\"window.scrollTo(0, document.body.scrollHeight); window.scrollBy(0,-200);\") # \"-200\" scrolls up a little, so that websites like FB think that the user is approaching the end, thus load more content\")\n",
     "        lenOfPage = browser.execute_script(\"var lenOfPage=document.body.scrollHeight; return lenOfPage;\")\n",
     "        return lenOfPage\n",
     "    except Exception as e:\n",
@@ -584,11 +584,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scrollTillEnd(browser):\n",
+    "def scrollTillEnd(browser, timeTillNextScroll = 3):\n",
     "    \"\"\" \n",
     "    This function uses Helium (or Selenium) browser to scroll \n",
     "    Through a page that dynamically loads content in order to \n",
@@ -601,7 +601,7 @@
     "    match=False\n",
     "    while(match == False):\n",
     "        prevLen = pageLen\n",
-    "        time.sleep(3)\n",
+    "        time.sleep(timeTillNextScroll)\n",
     "        pageLen = hitPageBottom(browser)\n",
     "        if (pageLen == -1):\n",
     "            return\n",
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +649,7 @@
     "        print(e)\n",
     "        return []\n",
     "    imgLinks = re.findall(r'https://scontent[^\"]+', htmlStartingFromAllPhotos)\n",
-    "    imgLinks = [html.unescape(link) for link in imgLinks][1:] #avoiding first image, as it might be the page's logo\n",
+    "    imgLinks = [html.unescape(link) for link in imgLinks][8:]  #avoiding first couple of images, as they might be related to the page itself (logo, etc)\n",
     "    return imgLinks\n",
     "\n",
     "def fbExtractImgsLinksOld(heliumBrowser): # didn't use this, as regex is faster than selenium methods \n",
@@ -658,13 +658,13 @@
     "    for link in imgTags:\n",
     "        if link.get_attribute('src') is not None:\n",
     "            imgLinks.append(link.get_attribute('src'))\n",
-    "    imgLinks = [html.unescape(link) for link in imgLinks][1:] #avoiding first image, as it might be the page's logo\n",
+    "    imgLinks = [html.unescape(link) for link in imgLinks][8:] #avoiding first couple of images, as they might be related to the page itself (logo, etc)\n",
     "    return imgLinks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,9 @@
     "        except Exception as e:\n",
     "            print(\"pop-up didn't  show, moving on...\")\n",
     "        print(\"Scrolling page:\", pageName)\n",
-    "        scrollTillEnd(heliumBrowser)\n",
+    "        scrollTillEnd(heliumBrowser, 4)\n",
+    "        time.sleep(3)\n",
+    "        scrollTillEnd(heliumBrowser, 8) # means that FB now starts loading content more slowly, so try again with a bigger time interval between scrolls\n",
     "        imgLinks = fbExtractImgsLinks(heliumBrowser.page_source)\n",
     "        allLinks.extend(imgLinks) #extend() expands the elements of an iterable\n",
     "        pklSave(imgLinks, f\"{dataDir}{singlePagePickleName}{i}.pickle\")\n",
@@ -711,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,27 +813,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pop-up didn't  show, moving on...\n",
+      "Scrolling page: Inbox .\n",
+      "Finished, scraping next link...\n",
+      "\n",
+      "pop-up didn't  show, moving on...\n",
+      "Scrolling page: Inbox ツ\n",
+      "Finished scraping pages!\n"
+     ]
+    }
+   ],
    "source": [
     "#browser = start_chrome(headless=False)\n",
     "#fbPageImgScraper(fbLinks, browser, \"eSocialMediaLinksfbPage\", \"allFbPagesESocialMedia\", \"fbESocialMediaPagesUsed\")\n",
-    "#browser.quit()\n",
-    "# to-do: run the above lines ^^"
+    "#browser.quit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total ESocialMedia links obtained: 6556\n",
+      "all FB pages used to get links from: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "allESocialMediaLinks = pklLoad(f\"{dataDir}allFbPagesESocialMedia.pickle\")\n",
+    "prevObtainedPages = pklLoad(f\"{dataDir}fbESocialMediaPagesUsed.pickle\")\n",
+    "print('Total ESocialMedia links obtained:', len(allESocialMediaLinks))\n",
+    "print('all FB pages used to get links from:', len(prevObtainedPages))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#allESocialMediaLinks = pklLoad(f\"{dataDir}allFbPagesESocialMedia.pickle\")\n",
-    "#prevObtainedPages = pklLoad(f\"{dataDir}fbESocialMediaPagesUsed.pickle\")\n",
-    "#fns = getAsyncImgFunctions(allEmemesLinks, imgTypes[3], len(allESocialMediaLinks)//50)\n",
+    "#fns = getAsyncImgFunctions(allESocialMediaLinks, imgTypes[3], len(allESocialMediaLinks)//50)\n",
     "#if __name__ == '__main__':\n",
-    "#    runInParallel(fns)"
+    "#   runInParallel(fns)"
    ]
   },
   {
@@ -1037,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1055,13 +1089,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code to save redditImgLinks into 4. fFbPosts\n",
-    "\n",
-    "# comment this at the end"
+    "# fns = getAsyncImgFunctions(redditImgLinks, imgTypes[4], len(redditImgLinks)//50)\n",
+    "# if __name__ == '__main__':\n",
+    "#   runInParallel(fns)"
    ]
   },
   {
@@ -1121,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1139,13 +1173,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code to save redditImgLinks into 5. fTwtrPosts\n",
-    "\n",
-    "# comment this at the end"
+    "fns = getAsyncImgFunctions(redditImgLinks, imgTypes[5], len(redditImgLinks)//50)\n",
+    "if __name__ == '__main__':\n",
+    "  runInParallel(fns)"
    ]
   },
   {
@@ -1473,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1650,17 +1684,16 @@
     }
    ],
    "source": [
-    "capabilities = DesiredCapabilities.CHROME\n",
-    "capabilities[\"pageLoadStrategy\"] = \"none\"\n",
-    "browser = start_chrome(headless=True, capabilities=capabilities)\n",
-    "redditImgLinks = getSubredditImgsLinks(redditLinks[3], browser, \"fChats1FromReddit\")\n",
-    "browser.quit()\n",
-    "# comment this at the end"
+    "# capabilities = DesiredCapabilities.CHROME\n",
+    "# capabilities[\"pageLoadStrategy\"] = \"none\"\n",
+    "# browser = start_chrome(headless=True, capabilities=capabilities)\n",
+    "# redditImgLinks = getSubredditImgsLinks(redditLinks[3], browser, \"fChats1FromReddit\")\n",
+    "# browser.quit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1678,14 +1711,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#redditImgLinks = redditImgLinks0 + redditImgLinks1\n",
-    "# code to save redditImgLinks into 6. fTxtMssgs\n",
-    "\n",
-    "# comment this at the end"
+    "redditImgLinks = redditImgLinks0 + redditImgLinks1\n",
+    "fns = getAsyncImgFunctions(redditImgLinks, imgTypes[6], len(redditImgLinks)//50)\n",
+    "if __name__ == '__main__':\n",
+    "  runInParallel(fns)"
    ]
   },
   {
