before cleaning corrupt images from non-reddit memes and posts

--- a/dataset_scraper.ipynb
+++ b/dataset_scraper.ipynb
@@ -1642,11 +1642,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cleanImgs(directoryPaths, picklesPaths, isReddit = False): \n",
+    "def cleanImgs(directoryPaths, picklesPaths = None, isReddit = False): \n",
     "    \"\"\"\n",
     "    removes bad images like corrupted or \"deleted\" images (in case of reddit) from specified directory paths, and updates their \n",
     "    corresponding pickle files (IMP note: \"picklesPath\" is a list of paths to pickle files\n",
@@ -1656,7 +1656,7 @@
     "        deletedIds = []\n",
     "        corruptedImgs = 0\n",
     "        imgsPaths = [os.path.join(directoryPaths[i], imgFile) for imgFile in os.listdir(directoryPaths[i])]\n",
-    "        print(f'Before cleaning: {len(imgsPaths)} images..')\n",
+    "        print(f'Before cleaning \"{directoryPaths[i]}\": {len(imgsPaths)} images..')\n",
     "        for imgPath in imgsPaths:\n",
     "            img = cv2.imread(imgPath)\n",
     "            if img is None:\n",
@@ -1672,11 +1672,11 @@
     "        if len(deletedIds) == 0:\n",
     "            print('no bad images found!!', end = '\\n\\n')\n",
     "            continue\n",
-    "        \n",
-    "        imgsUrls = pklForceLoad(f'{picklesPaths[i]}.pickle', 'list')\n",
-    "        for idx in reversed(deletedIds):\n",
-    "            imgsUrls.pop(idx)\n",
-    "        pklSave(imgsUrls, f'{picklesPaths[i]}Updated.pickle')\n",
+    "        if isReddit:\n",
+    "            imgsUrls = pklForceLoad(f'{picklesPaths[i]}.pickle', 'list')\n",
+    "            for idx in reversed(deletedIds):\n",
+    "                imgsUrls.pop(idx)\n",
+    "            pklSave(imgsUrls, f'{picklesPaths[i]}Updated.pickle')\n",
     "        if corruptedImgs > 0:\n",
     "                print(f'{corruptedImgs} corrupted images were found!')\n",
     "\n",
@@ -1732,10 +1732,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cleaning corrupted images that didn't come from Reddit"
+    "## Cleaning corrupted images that didn't come from Reddit\n",
+    "For example, in `ememes` folder, there are some corrupted images: <br>\n",
+    "<img src=\"project_media/10. corrupted images.png\" width=\"500\" />"
    ]
   },
   {
@@ -1743,7 +1746,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "otherDirectoriesToClean = [\n",
+    "    'dataset/1. fmemes/',\n",
+    "    'dataset/2. ememes/',\n",
+    "    'dataset/3. eSocialMedia/',\n",
+    "    'dataset/7. eGreetingAndMisc/'\n",
+    "]\n",
+    "cleanImgs(otherDirectoriesToClean)"
+   ]
   }
  ],
  "metadata": {
