to do: visualize img properties in each folder

--- a/dataset_scraper.ipynb
+++ b/dataset_scraper.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,13 @@
     "import json\n",
     "import time\n",
     "from datetime import datetime\n",
+    "\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot  as plt\n",
+    "from PIL import Image\n",
+    "from pathlib import Path\n",
+    "import imagesize\n",
+    "import numpy as np\n",
     "\n",
     "import download_imgs # used in getAsyncImgFunctions()"
    ]
@@ -1642,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1653,38 +1660,41 @@
     "    that should NOT include the \".pickle\" extension at the end of the string)\n",
     "    \"\"\"\n",
     "    for i in range(len(directoryPaths)):\n",
-    "        deletedIds = []\n",
-    "        corruptedImgs = 0\n",
-    "        imgsPaths = [os.path.join(directoryPaths[i], imgFile) for imgFile in os.listdir(directoryPaths[i])]\n",
-    "        print(f'Before cleaning \"{directoryPaths[i]}\": {len(imgsPaths)} images..')\n",
-    "        for imgPath in imgsPaths:\n",
-    "            img = cv2.imread(imgPath)\n",
-    "            if img is None:\n",
-    "                os.remove(imgPath)\n",
-    "                deletedIds.append(id)\n",
-    "                corruptedImgs += 1\n",
-    "                continue\n",
-    "            if isReddit and img.shape[0] == 60 and img.shape[1] == 130:\n",
+    "        try:\n",
+    "            deletedIds = []\n",
+    "            corruptedImgs = 0\n",
+    "            imgsPaths = [os.path.join(directoryPaths[i], imgFile) for imgFile in os.listdir(directoryPaths[i])]\n",
+    "            print(f'Before cleaning \"{directoryPaths[i]}\": {len(imgsPaths)} images..')\n",
+    "            for imgPath in imgsPaths:\n",
+    "                img = cv2.imread(imgPath)\n",
     "                id = int(re.search('(\\d{7})(?=\\.jpg|\\.png|\\.jpeg)', imgPath).group(1))\n",
-    "                os.remove(imgPath)\n",
-    "                deletedIds.append(id)\n",
+    "                if img is None:\n",
+    "                    os.remove(imgPath)\n",
+    "                    deletedIds.append(id)\n",
+    "                    corruptedImgs += 1\n",
+    "                    continue\n",
+    "                if isReddit and img.shape[0] == 60 and img.shape[1] == 130:\n",
+    "                    os.remove(imgPath)\n",
+    "                    deletedIds.append(id)\n",
     "\n",
-    "        if len(deletedIds) == 0:\n",
-    "            print('no bad images found!!', end = '\\n\\n')\n",
-    "            continue\n",
-    "        if isReddit:\n",
-    "            imgsUrls = pklForceLoad(f'{picklesPaths[i]}.pickle', 'list')\n",
-    "            for idx in reversed(deletedIds):\n",
-    "                imgsUrls.pop(idx)\n",
-    "            pklSave(imgsUrls, f'{picklesPaths[i]}Updated.pickle')\n",
-    "        if corruptedImgs > 0:\n",
-    "                print(f'{corruptedImgs} corrupted images were found!')\n",
+    "            if len(deletedIds) == 0:\n",
+    "                print('no bad images found!!', end = '\\n\\n')\n",
+    "                continue\n",
+    "            if isReddit:\n",
+    "                imgsUrls = pklForceLoad(f'{picklesPaths[i]}.pickle', 'list')\n",
+    "                for idx in reversed(deletedIds):\n",
+    "                    imgsUrls.pop(idx)\n",
+    "                pklSave(imgsUrls, f'{picklesPaths[i]}Updated.pickle')\n",
+    "            if corruptedImgs > 0:\n",
+    "                    print(f'{corruptedImgs} corrupted images were found!')\n",
     "\n",
-    "        newImgsPaths = [os.path.join(directoryPaths[i], imgFile) for imgFile in os.listdir(directoryPaths[i])]\n",
-    "        print(f'After cleaning: {len(newImgsPaths)} images..', end = '\\n\\n')\n",
-    "        for j in range(len(newImgsPaths)):\n",
-    "            newName = re.sub('(\\d{7})(?=\\.jpg|\\.png|\\.jpeg)', format(j, '07d'), newImgsPaths[j])\n",
-    "            os.rename(newImgsPaths[j], newName)"
+    "            newImgsPaths = [os.path.join(directoryPaths[i], imgFile) for imgFile in os.listdir(directoryPaths[i])]\n",
+    "            print(f'After cleaning: {len(newImgsPaths)} images..', end = '\\n\\n')\n",
+    "            for j in range(len(newImgsPaths)):\n",
+    "                newName = re.sub('(\\d{7})(?=\\.jpg|\\.png|\\.jpeg)', format(j, '07d'), newImgsPaths[j])\n",
+    "                os.rename(newImgsPaths[j], newName)\n",
+    "        except Exception as e:\n",
+    "            print(e)"
    ]
   },
   {
@@ -1743,17 +1753,138 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before cleaning \"dataset/1. fmemes/\": 32513 images..\n",
+      "1497 corrupted images were found!\n",
+      "After cleaning: 31016 images..\n",
+      "\n",
+      "Before cleaning \"dataset/2. ememes/\": 16018 images..\n",
+      "1900 corrupted images were found!\n",
+      "After cleaning: 14118 images..\n",
+      "\n",
+      "Before cleaning \"dataset/3. eSocialMedia/\": 6713 images..\n",
+      "no bad images found!!\n",
+      "\n",
+      "Before cleaning \"dataset/7. eGreetingAndMisc/\": 17044 images..\n",
+      "no bad images found!!\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# otherDirectoriesToClean = [\n",
+    "#     'dataset/1. fmemes/',\n",
+    "#     'dataset/2. ememes/',\n",
+    "# ]\n",
+    "# cleanImgs(otherDirectoriesToClean)\n",
+    "# # unxpected error occured, so will clean 2. ememes again"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before cleaning \"dataset/2. ememes/\": 14118 images..\n",
+      "no bad images found!!\n",
+      "\n",
+      "Before cleaning \"dataset/3. eSocialMedia/\": 6713 images..\n",
+      "no bad images found!!\n",
+      "\n",
+      "Before cleaning \"dataset/7. eGreetingAndMisc/\": 17044 images..\n",
+      "no bad images found!!\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# otherDirectoriesToClean = [\n",
+    "#     'dataset/2. ememes/',\n",
+    "#     'dataset/3. eSocialMedia/',\n",
+    "#     'dataset/7. eGreetingAndMisc/'\n",
+    "# ]\n",
+    "# cleanImgs(otherDirectoriesToClean)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualizing Image Properties\n",
+    "Now, we want to decide how much downscaling/upscaling we want to do to our images, so we could do so understanding the general sizes of the images in our dataset <br>\n",
+    "most of the logic below is by [Aravind Ramalingam](https://medium.com/analytics-vidhya/how-to-pick-the-optimal-image-size-for-training-convolution-neural-network-65702b880f05)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[WindowsPath('d:/CS/projects/graduation_project/dataset/0. normal'),\n",
+       " WindowsPath('d:/CS/projects/graduation_project/dataset/1. fmemes'),\n",
+       " WindowsPath('d:/CS/projects/graduation_project/dataset/2. ememes'),\n",
+       " WindowsPath('d:/CS/projects/graduation_project/dataset/3. eSocialMedia'),\n",
+       " WindowsPath('d:/CS/projects/graduation_project/dataset/4. fFbPosts'),\n",
+       " WindowsPath('d:/CS/projects/graduation_project/dataset/5. fTwtrPosts'),\n",
+       " WindowsPath('d:/CS/projects/graduation_project/dataset/6. fTxtMssgs'),\n",
+       " WindowsPath('d:/CS/projects/graduation_project/dataset/7. eGreetingAndMisc')]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datasetPaths = [dp.absolute() for dp in Path(dataDir).iterdir() if re.match(\"^\\d+\\. \", dp.name)]\n",
+    "datasetPaths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "otherDirectoriesToClean = [\n",
-    "    'dataset/1. fmemes/',\n",
-    "    'dataset/2. ememes/',\n",
-    "    'dataset/3. eSocialMedia/',\n",
-    "    'dataset/7. eGreetingAndMisc/'\n",
-    "]\n",
-    "cleanImgs(otherDirectoriesToClean)"
+    "# Identify Image Resolutions\n",
+    "\n",
+    "def getImgsMetaInDf(datasetPaths):\n",
+    "    dfs = []\n",
+    "    for dp in datasetPaths:\n",
+    "        # Get the Image Resolutions\n",
+    "        imgs = [img.name for img in dp.iterdir()]\n",
+    "        img_meta = {}\n",
+    "        for imgName in imgs: \n",
+    "            img_meta[str(imgName)] = imagesize.get(dp.as_posix() + imgName) # as_posix() converts WindowsPath object to just the string of the absolute path\n",
+    "\n",
+    "        # Convert it to Dataframe and compute aspect ratio\n",
+    "        img_meta_df = pd.DataFrame.from_dict([img_meta]).T.reset_index().set_axis(['FileName', 'Size'], axis='columns', inplace=False)\n",
+    "        img_meta_df[[\"Width\", \"Height\"]] = pd.DataFrame(img_meta_df[\"Size\"].tolist(), index=img_meta_df.index)\n",
+    "        img_meta_df[\"Aspect Ratio\"] = round(img_meta_df[\"Width\"] / img_meta_df[\"Height\"], 2)\n",
+    "        \n",
+    "\n",
+    "        print(f'Total Nr of Images in the dataset {dp.name}: {len(img_meta_df)}')\n"
    ]
   }
  ],
