added dataset folders

--- a/gp_related/undersampling.ipynb
+++ b/gp_related/undersampling.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "# Removing Images of Incorrect Categories\n",
     "Some of the folders include images that should be deleted or moved to other directories. The following is an example on the `fFBPosts` folder: <br><br>\n",
-    "<img src=\"project_media/12. misplaced fb images.png\" />\n",
+    "<img src=\"../project_media/12. misplaced fb images.png\" />\n",
     "<br><br>\n",
     "As you can see, we want to discard non-facebook images like the one on the left. <br>\n",
     "Therefore, the following sub sections will be about removing those images in each folder except `selfies` and `fmemes`, as they are obtained from online datasets (i.e., not manually scraped) and therefore do not have misplacements. In addition, they were manually validated to confirm the unnecessity of checking misplacements."
@@ -64,7 +64,7 @@
    "source": [
     "## Incorrect images in `ememes`\n",
     "In the ememes folder, we have multiple of types of images as can be seen by the image below: <br><br>\n",
-    "<img src=\"project_media/13. misplaced ememes images.png\" width=750 />\n",
+    "<img src=\"../project_media/13. misplaced ememes images.png\" width=750 />\n",
     "<br><br>\n",
     "we can therefore notice the following types of images: <br>\n",
     "- Meme templates, which are memes that do not contain text (1)\n",
@@ -89,7 +89,7 @@
    "source": [
     "## Incorrect images in `eSocialMedia`\n",
     "In the eSocialMedia folder, we have multiple of types of images as can be seen by the image below: <br><br>\n",
-    "<img src=\"project_media/14. misplaced eSocialMedia images.png\" width=550 />\n",
+    "<img src=\"../project_media/14. misplaced eSocialMedia images.png\" width=550 />\n",
     "<br><br>\n",
     "we can therefore notice the following types of images: <br>\n",
     "- Memes that are actually chat messages (1)\n",
@@ -112,7 +112,7 @@
    "source": [
     "## Incorrect images in `fFbPosts` & `fTwtrPosts`\n",
     "As shown previously: <br> <br>\n",
-    "<img src=\"project_media/12. misplaced fb images.png\" />\n",
+    "<img src=\"../project_media/12. misplaced fb images.png\" />\n",
     "<br><br>\n",
     "Only the image on the right is desirable (similar case applies for the twitter images). However, since the folders contain 2k and 1k images respectively, manual deletion of misplaced images is done for these folders. "
    ]
@@ -124,7 +124,7 @@
    "source": [
     "## Incorrect images in `fTxtMssgs`\n",
     "Upon quick inspection of the approximately 16K images in `fTxtMssgs` folder, it was found that very few images are considered outliers/misplacements. However, upon inspecting the sample of images here: <br><br>\n",
-    "<img src=\"project_media/15. random fTxtMssgs images.png\" height=\"500\"/>\n",
+    "<img src=\"../project_media/15. random fTxtMssgs images.png\" height=\"500\"/>\n",
     "<br><br>\n",
     "We can see two specific types of images that could cause problems in the future:\n",
     "1. images that were not found by the imgur api, so a template \"not found\" image of size 161x81 is returned instead.\n",
@@ -147,7 +147,7 @@
    "source": [
     "## Incorrect images in `eGreetingAndMisc`\n",
     "Upon quick inspection of the approximately 17K images in `eGreetingAndMisc` folder, it was found that very few images are considered outliers/misplacements. However, upon inspecting the sample of images in places like here: <br><br>\n",
-    "<img src=\"project_media/16. misplaced eGreetingAndMisc images.png\" height=\"300\"/>\n",
+    "<img src=\"../project_media/16. misplaced eGreetingAndMisc images.png\" height=\"300\"/>\n",
     "<br><br>\n",
     "We found that most of the misplaced images are those of random people scraped from google's search engine. <br><br>\n",
     "Therefore, we could just remove images that do not contain text into a temporary folder for later manual inspection"
