started analyzing image metadata on current and phone (preview) datasets

--- a/gp_related/plot_type_function_draft.ipynb
+++ b/gp_related/plot_type_function_draft.ipynb
@@ -13,6 +13,36 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getOutput(uniqueTxtInCellYouWantToRetrieve='', finalExecCell=True):\n",
+    "    '''\n",
+    "    Prerequisites:\n",
+    "    pip/conda intstall scrapbook\n",
+    "    Save the .ipynb file first before using this function\n",
+    "    '''\n",
+    "    nb = sb.read_notebook(nbName if nbName != '' else os.path.basename(globals()['__vsc_ipynb_file__']))\n",
+    "    mx = -1\n",
+    "    chosenCell = -1\n",
+    "    i = 0\n",
+    "    for cell in nb.cells:\n",
+    "        if (uniqueTxtInCellYouWantToRetrieve in cell['source']):\n",
+    "            break\n",
+    "        if ('execution_count' in cell and cell['execution_count'] > mx):\n",
+    "            mx = cell['execution_count']\n",
+    "            chosenCell = i\n",
+    "        i += 1\n",
+    "        \n",
+    "    s = ''\n",
+    "    for txt in cell[i]['outputs']:\n",
+    "        s += txt['text']\n",
+    "    return s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
