--- a/models.ipynb
+++ b/models.ipynb
@@ -10,26 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\tensorflow_addons\\utils\\ensure_tf_install.py:53: UserWarning:\n",
-      "\n",
-      "Tensorflow Addons supports using Python ops for all Tensorflow versions above or equal to 2.3.0 and strictly below 2.6.0 (nightly versions are not supported). \n",
-      " The versions of TensorFlow you are currently using is 2.6.0 and is not supported. \n",
-      "Some things might work, some things might not.\n",
-      "If you were to encounter a bug, do not file an issue.\n",
-      "If you want to make sure you're using a tested and supported configuration, either change the TensorFlow version or the TensorFlow Addons's version. \n",
-      "You can find the compatibility matrix in TensorFlow Addon's readme:\n",
-      "https://github.com/tensorflow/addons\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from numpy.random import seed\n",
     "seed(42)\n",
@@ -98,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,23 +544,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'00. selfies': 0,\n",
-       " '10. fmemes': 1,\n",
-       " '20. ememes': 2,\n",
-       " '30. eSocialMedia': 3,\n",
-       " '40. fFbPosts': 4,\n",
-       " '50. fTwtrPosts': 5,\n",
-       " '60. fTxtMssgs': 6,\n",
-       " '70. eGreetingAndMisc': 7}"
+       "{'00. selfies': 0, '10. fmemes': 1, '20. ememes': 2, '30. eSocialMedia': 3, '40. fFbPosts': 4, '50. fTwtrPosts': 5, '60. fTxtMssgs': 6, '70. eGreetingAndMisc': 7}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -679,23 +655,11 @@
       "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
       "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
       "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
-      "Epoch 1/30\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1/30\n",
       "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\keras\\metrics.py:254: UserWarning:\n",
       "\n",
       "Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "2903/2903 - 372s - loss: 1.0052 - acc: 0.8434 - f1_score: 0.6997 - val_loss: 0.2900 - val_acc: 0.9100 - val_f1_score: 0.8023\n",
       "Epoch 2/30\n",
       "2903/2903 - 372s - loss: 0.2332 - acc: 0.9265 - f1_score: 0.8402 - val_loss: 0.2602 - val_acc: 0.9227 - val_f1_score: 0.8202\n",
@@ -754,7 +718,8 @@
       "Epoch 29/30\n",
       "2903/2903 - 366s - loss: 0.0385 - acc: 0.9936 - f1_score: 0.9886 - val_loss: 1.0907 - val_acc: 0.9259 - val_f1_score: 0.8257\n",
       "Epoch 30/30\n",
-      "2903/2903 - 361s - loss: 0.0463 - acc: 0.9936 - f1_score: 0.9873 - val_loss: 1.4592 - val_acc: 0.9185 - val_f1_score: 0.8229\n"
+      "2903/2903 - 361s - loss: 0.0463 - acc: 0.9936 - f1_score: 0.9873 - val_loss: 1.4592 - val_acc: 0.9185 - val_f1_score: 0.8229\n",
+      "\n"
      ]
     }
    ],
@@ -771,7 +736,10 @@
     "        verbose=2, \n",
     "        optimizer=\"adam\", \n",
     "        additionalMetrics=[],\n",
-    "        load=False)"
+    "        load=True) # False to train, then always set to True to load trained model\n",
+    "\n",
+    "cellOutput = [\"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"Epoch 1/30\\n\" ] + [ \"d:\\\\CS\\\\projects\\\\graduation_project\\\\.conda\\\\lib\\\\site-packages\\\\keras\\\\metrics.py:254: UserWarning:\\n\", \"\\n\", \"Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \\\"s\\\"). The name `reset_states()` has been deprecated to improve API consistency.\\n\", \"\\n\" ] + [ \"2903/2903 - 372s - loss: 1.0052 - acc: 0.8434 - f1_score: 0.6997 - val_loss: 0.2900 - val_acc: 0.9100 - val_f1_score: 0.8023\\n\", \"Epoch 2/30\\n\", \"2903/2903 - 372s - loss: 0.2332 - acc: 0.9265 - f1_score: 0.8402 - val_loss: 0.2602 - val_acc: 0.9227 - val_f1_score: 0.8202\\n\", \"Epoch 3/30\\n\", \"2903/2903 - 369s - loss: 0.1628 - acc: 0.9480 - f1_score: 0.8909 - val_loss: 0.2368 - val_acc: 0.9315 - val_f1_score: 0.8237\\n\", \"Epoch 4/30\\n\", \"2903/2903 - 363s - loss: 0.1225 - acc: 0.9612 - f1_score: 0.9256 - val_loss: 0.2672 - val_acc: 0.9315 - val_f1_score: 0.8341\\n\", \"Epoch 5/30\\n\", \"2903/2903 - 374s - loss: 0.0897 - acc: 0.9725 - f1_score: 0.9474 - val_loss: 0.3148 - val_acc: 0.9331 - val_f1_score: 0.8333\\n\", \"Epoch 6/30\\n\", \"2903/2903 - 370s - loss: 0.0722 - acc: 0.9792 - f1_score: 0.9590 - val_loss: 0.4762 - val_acc: 0.9223 - val_f1_score: 0.8075\\n\", \"Epoch 7/30\\n\", \"2903/2903 - 374s - loss: 0.0660 - acc: 0.9829 - f1_score: 0.9653 - val_loss: 0.4618 - val_acc: 0.9306 - val_f1_score: 0.8339\\n\", \"Epoch 8/30\\n\", \"2903/2903 - 372s - loss: 0.0540 - acc: 0.9854 - f1_score: 0.9717 - val_loss: 0.4716 - val_acc: 0.9341 - val_f1_score: 0.8338\\n\", \"Epoch 9/30\\n\", \"2903/2903 - 365s - loss: 0.0541 - acc: 0.9866 - f1_score: 0.9747 - val_loss: 0.4721 - val_acc: 0.9331 - val_f1_score: 0.8393\\n\", \"Epoch 10/30\\n\", \"2903/2903 - 371s - loss: 0.0492 - acc: 0.9884 - f1_score: 0.9778 - val_loss: 0.4834 - val_acc: 0.9240 - val_f1_score: 0.8111\\n\", \"Epoch 11/30\\n\", \"2903/2903 - 369s - loss: 0.0526 - acc: 0.9879 - f1_score: 0.9757 - val_loss: 0.5006 - val_acc: 0.9177 - val_f1_score: 0.8136\\n\", \"Epoch 12/30\\n\", \"2903/2903 - 368s - loss: 0.0395 - acc: 0.9903 - f1_score: 0.9785 - val_loss: 0.9154 - val_acc: 0.9145 - val_f1_score: 0.8022\\n\", \"Epoch 13/30\\n\", \"2903/2903 - 372s - loss: 0.0513 - acc: 0.9888 - f1_score: 0.9801 - val_loss: 0.7582 - val_acc: 0.9206 - val_f1_score: 0.8198\\n\", \"Epoch 14/30\\n\", \"2903/2903 - 370s - loss: 0.0426 - acc: 0.9913 - f1_score: 0.9842 - val_loss: 0.6775 - val_acc: 0.9260 - val_f1_score: 0.8297\\n\", \"Epoch 15/30\\n\", \"2903/2903 - 360s - loss: 0.0364 - acc: 0.9921 - f1_score: 0.9841 - val_loss: 0.8573 - val_acc: 0.9248 - val_f1_score: 0.8254\\n\", \"Epoch 16/30\\n\", \"2903/2903 - 368s - loss: 0.0508 - acc: 0.9892 - f1_score: 0.9800 - val_loss: 0.8534 - val_acc: 0.9280 - val_f1_score: 0.8265\\n\", \"Epoch 17/30\\n\", \"2903/2903 - 360s - loss: 0.0415 - acc: 0.9909 - f1_score: 0.9811 - val_loss: 0.8019 - val_acc: 0.9272 - val_f1_score: 0.8299\\n\", \"Epoch 18/30\\n\", \"2903/2903 - 364s - loss: 0.0540 - acc: 0.9902 - f1_score: 0.9823 - val_loss: 0.8515 - val_acc: 0.9146 - val_f1_score: 0.8164\\n\", \"Epoch 19/30\\n\", \"2903/2903 - 363s - loss: 0.0424 - acc: 0.9914 - f1_score: 0.9831 - val_loss: 0.7661 - val_acc: 0.9234 - val_f1_score: 0.8219\\n\", \"Epoch 20/30\\n\", \"2903/2903 - 367s - loss: 0.0381 - acc: 0.9922 - f1_score: 0.9874 - val_loss: 0.8021 - val_acc: 0.9264 - val_f1_score: 0.8326\\n\", \"Epoch 21/30\\n\", \"2903/2903 - 368s - loss: 0.0423 - acc: 0.9919 - f1_score: 0.9838 - val_loss: 1.1104 - val_acc: 0.9063 - val_f1_score: 0.8153\\n\", \"Epoch 22/30\\n\", \"2903/2903 - 366s - loss: 0.0402 - acc: 0.9925 - f1_score: 0.9863 - val_loss: 0.9931 - val_acc: 0.9228 - val_f1_score: 0.8318\\n\", \"Epoch 23/30\\n\", \"2903/2903 - 368s - loss: 0.0452 - acc: 0.9912 - f1_score: 0.9838 - val_loss: 1.0722 - val_acc: 0.9207 - val_f1_score: 0.8330\\n\", \"Epoch 24/30\\n\", \"2903/2903 - 363s - loss: 0.0402 - acc: 0.9929 - f1_score: 0.9872 - val_loss: 0.9528 - val_acc: 0.9171 - val_f1_score: 0.8217\\n\", \"Epoch 25/30\\n\", \"2903/2903 - 365s - loss: 0.0414 - acc: 0.9929 - f1_score: 0.9871 - val_loss: 1.2603 - val_acc: 0.9168 - val_f1_score: 0.8207\\n\", \"Epoch 26/30\\n\", \"2903/2903 - 361s - loss: 0.0442 - acc: 0.9926 - f1_score: 0.9863 - val_loss: 1.2261 - val_acc: 0.9160 - val_f1_score: 0.8211\\n\", \"Epoch 27/30\\n\", \"2903/2903 - 359s - loss: 0.0392 - acc: 0.9930 - f1_score: 0.9879 - val_loss: 1.3015 - val_acc: 0.9113 - val_f1_score: 0.8158\\n\", \"Epoch 28/30\\n\", \"2903/2903 - 358s - loss: 0.0418 - acc: 0.9936 - f1_score: 0.9878 - val_loss: 1.2518 - val_acc: 0.9213 - val_f1_score: 0.8298\\n\", \"Epoch 29/30\\n\", \"2903/2903 - 366s - loss: 0.0385 - acc: 0.9936 - f1_score: 0.9886 - val_loss: 1.0907 - val_acc: 0.9259 - val_f1_score: 0.8257\\n\", \"Epoch 30/30\\n\", \"2903/2903 - 361s - loss: 0.0463 - acc: 0.9936 - f1_score: 0.9873 - val_loss: 1.4592 - val_acc: 0.9185 - val_f1_score: 0.8229\\n\" ]\n",
+    "print(''.join(cellOutput))"
    ]
   },
   {
@@ -6057,13 +6025,6 @@
     "for key, val in figDict.items():\n",
     "    val.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
