--- a/gp_related/code_to_get_some_image_features.ipynb
+++ b/gp_related/code_to_get_some_image_features.ipynb
@@ -5,6 +5,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from PIL import Image\n",
     "\n",
@@ -78,11 +85,49 @@
     "print(camera_settings)\n",
     "print(faces_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# draft, to do: delete later, this was for detecting text bounding boxes quickly\n",
+    "\n",
+    "# Load the image\n",
+    "img = Image.open('./dataset/20. ememes/ememes0002155.jpg')\n",
+    "img = img.resize((306,306))\n",
+    "img = np.array(img)\n",
+    "# Convert the image to grayscale\n",
+    "gray = cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
+    "\n",
+    "# Apply thresholding to segment the text\n",
+    "thresh = cv2.threshold(gray, 0, 255, cv2.THRESH_BINARY_INV + cv2.THRESH_OTSU)[1]\n",
+    "\n",
+    "# Find contours in the image\n",
+    "contours, hierarchy = cv2.findContours(thresh, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "\n",
+    "# Iterate through the contours and draw bounding boxes around the text\n",
+    "for contour in contours:\n",
+    "    x, y, w, h = cv2.boundingRect(contour)\n",
+    "    cv2.rectangle(img, (x, y), (x+w, y+h), (0, 255, 0), 2)\n",
+    "\n",
+    "# # Display the output image\n",
+    "# cv2.imshow('Text Detection', img)\n",
+    "# cv2.waitKey(0)\n",
+    "# cv2.destroyAllWindows()\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.15"
   },
   "orig_nbformat": 4
  },
