renamed some ipynb files, and upated gp_related files

--- a/model_v01_without_metadata.ipynb
+++ b/model_v01_without_metadata.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -10,9 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\tensorflow_addons\\utils\\ensure_tf_install.py:53: UserWarning:\n",
+      "\n",
+      "Tensorflow Addons supports using Python ops for all Tensorflow versions above or equal to 2.3.0 and strictly below 2.6.0 (nightly versions are not supported). \n",
+      " The versions of TensorFlow you are currently using is 2.6.0 and is not supported. \n",
+      "Some things might work, some things might not.\n",
+      "If you were to encounter a bug, do not file an issue.\n",
+      "If you want to make sure you're using a tested and supported configuration, either change the TensorFlow version or the TensorFlow Addons's version. \n",
+      "You can find the compatibility matrix in TensorFlow Addon's readme:\n",
+      "https://github.com/tensorflow/addons\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from numpy.random import seed\n",
     "seed(42)\n",
@@ -81,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +113,7 @@
     "config = tf.compat.v1.ConfigProto( device_count = {'GPU': 1 , 'CPU': 8} )\n",
     "#source: https://liyin2015.medium.com/tensorflow-cpus-and-gpus-configuration-9c223436d4ef#:~:text=0%2C%201%2C%202-,GPU%20Growth,-The%20first%20is\n",
     "config.gpu_options.allow_growth = True\n",
-    "config.gpu_options.per_process_gpu_memory_fraction = 0.9\n",
+    "config.gpu_options.per_process_gpu_memory_fraction = 0.6\n",
     "sess = tf.compat.v1.Session(config=config) \n",
     "K.set_session(sess)\n",
     "mirrorStrategy = tf.distribute.MirroredStrategy() # source: https://www.kaggle.com/code/marcosnovaes/hubmap-unet-keras-model-fit-with-gpu"
@@ -105,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,16 +560,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'00. selfies': 0, '10. fmemes': 1, '20. ememes': 2, '30. eSocialMedia': 3, '40. fFbPosts': 4, '50. fTwtrPosts': 5, '60. fTxtMssgs': 6, '70. eGreetingAndMisc': 7}"
+       "{'00. selfies': 0,\n",
+       " '10. fmemes': 1,\n",
+       " '20. ememes': 2,\n",
+       " '30. fSocialMedia': 3,\n",
+       " '40. eSocialMedia': 4,\n",
+       " '50. fTxtMssgs': 5,\n",
+       " '70. eGreetingAndMisc': 6,\n",
+       " '81. academicPhotos': 7,\n",
+       " '82. academicDigital': 8}"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +591,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -576,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
