updated ipynb names, cleaned dataset_preprocessing_part_2.ipynb debug/draft cells to gp_related/debugging_cells_for_getImgsPropsDf_logic.ipynb. will do ISA: run all cells of former ipynb file

--- a/model_v01_without_metadata.ipynb
+++ b/model_v01_without_metadata.ipynb
@@ -629,7 +629,7 @@
     "test_gen = test_datagen.flow_from_directory(f'{dataSplit}test/', classes=None, class_mode='categorical',\n",
     "                                        target_size=(306,306), seed=42, batch_size=32, color_mode='rgb', shuffle=False)\n",
     "modelFileName = 'm01cnn.h5'\n",
-    "datasetDescription = 'rgb, 306x306, 30 epochs, no augmentation'\n",
+    "datasetDescription = 'no metadata, rgb, 306x306, 30 epochs, no augmentation, tf' # tf == tensorflow, pt == pytorch\n",
     "spe = train_gen.samples // train_gen.batch_size\n",
     "vsteps = val_gen.samples // val_gen.batch_size\n",
     "tsteps = test_gen.samples // test_gen.batch_size\n",
