--- a/model_v01_without_metadata.ipynb
+++ b/model_v01_without_metadata.ipynb
@@ -711,6 +711,26 @@
       "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
       "Epoch 1/30\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\keras\\metrics.py:254: UserWarning:\n",
+      "\n",
+      "Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2962/2962 - 797s - loss: 1.2059 - acc: 0.8180 - f1_score: 0.6602 - val_loss: 0.3023 - val_acc: 0.9025 - val_f1_score: 0.7968\n",
+      "Epoch 2/30\n",
+      "2962/2962 - 1462s - loss: 0.2494 - acc: 0.9205 - f1_score: 0.8379 - val_loss: 0.2363 - val_acc: 0.9240 - val_f1_score: 0.8466\n",
+      "Epoch 3/30\n"
+     ]
     }
    ],
    "source": [
